# prompt-library

./: .gitignore  LICENSE  README.md  pyproject.toml
anthropic/: Adaptive_editor.md  Airport_code_analyst.md  Alien_anthropologist.md  Alliteration_alchemist.md  Babel_s_broadcasts.md  Brand_builder.md  CSV_converter.md  Career_coach.md  Cite_your_sources.md  Code_clarifier.md  Code_consultant.md  Corporate_clairvoyant.md  Cosmic_keystrokes.md  Culinary_creator.md  Data_organizer.md  Direction_decoder.md  Dream_interpreter.md  Efficiency_estimator.md  Email_extractor.md  Emoji_encoder.md  Ethical_dilemma_navigator.md  Excel_formula_expert.md  Function_fabricator.md  Futuristic_fashion_advisor.md  Git_gud.md  Google_apps_scripter.md  Grading_guru.md  Grammar_genie.md  Hal_the_humorous_helper.md  Idiom_illuminator.md  Interview_question_crafter.md  LaTeX_legend.md  Lesson_planner.md  Master_moderator.md  Meeting_scribe.md  Memo_maestro.md  Mindfulness_mentor.md  Mood_colorizer.md  Motivational_muse.md  Neologism_creator.md  (+24 more)
src/anthropic/: fetch.py
